<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ShowsDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/included_progress"
            layout="@layout/progress_overlay" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="12dp"
            android:paddingTop="6dp"
            android:contentDescription="@string/shows_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_shows_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_shows_language"
            app:srcCompat="@drawable/poster_a_star_is_born" />

        <TextView
            android:id="@+id/tv_shows_title"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/shows_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_shows_release_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/shows_release_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_shows_title" />

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/tags"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_shows_release_year" />

        <TextView
            android:id="@+id/tv_shows_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/shows_tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_tags" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/language"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_shows_tags" />

        <TextView
            android:id="@+id/tv_shows_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/shows_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_language" />

        <TextView
            android:id="@+id/tv_user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_score"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/score_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:max="100"
            android:progress="10"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_score" />

        <TextView
            android:id="@+id/tv_shows_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shows_score"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/score_bar"
            app:layout_constraintLeft_toLeftOf="@id/score_bar"
            app:layout_constraintRight_toRightOf="@id/score_bar"
            app:layout_constraintTop_toTopOf="@id/score_bar" />

        <TextView
            android:id="@+id/tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/score_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_revenue"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/budget" />

        <TextView
            android:id="@+id/tv_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/score_bar"
            app:layout_constraintStart_toEndOf="@+id/tv_budget"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/revenue" />

        <TextView
            android:id="@+id/tv_shows_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_budget"
            app:layout_constraintLeft_toLeftOf="@id/tv_budget"
            app:layout_constraintRight_toRightOf="@id/tv_budget"
            android:layout_marginTop="4dp"
            android:text="@string/shows_budget" />

        <TextView
            android:id="@+id/tv_shows_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_revenue"
            app:layout_constraintLeft_toLeftOf="@id/tv_revenue"
            app:layout_constraintRight_toRightOf="@id/tv_revenue"
            android:layout_marginTop="4dp"
            android:text="@string/shows_revenue" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_shows_budget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/tv_shows_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="8dp"
            android:paddingVertical="6dp"
            android:gravity="center"
            android:text="@string/shows_overview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>