<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/filter_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_filter_popular"
            android:title="@string/menu_filter_popular" />
        <item
            android:id="@+id/action_filter_favorite"
            android:title="@string/menu_filter_favorite" />
    </group>
</menu>